test/classes/hannah/configSyncsNotSupported.good
configSyncsNotSupported.chpl:1: error: config variables of sync type are not supported
